# Synca

./: CMakeLists.txt  LICENSE  README.md  async.cpp  async.h  coro.cpp  coro.h  defs.h  main.cpp  sync.cpp  sync.h  synca.cpp  synca.h
examples/: CMakeLists.txt  client.cpp  data.cpp  server.cpp
include/: channel.h  common.h  core.h  coro.h  data.h  gc.h  goer.h  helpers.h  journey.h  mt.h  network.h  portal.h
src/: core.cpp  coro.cpp  gc.cpp  goer.cpp  journey.cpp  mt.cpp  network.cpp  portal.cpp
tests/: CMakeLists.txt  data_tests.cpp  data_tests.h  main.cpp  synca_tests.cpp  synca_tests.h
